css/style.css
/* GENERAL */
:root {
  --navbar-bg-color: #d9eee1;
  --navbar-text-color: #5e7062;
  --grey-text-color: rgb(82, 82, 82);
  --light-grey: rgb(241, 241, 241);
  --other-green: rgb(93, 155, 0);
  --navbar-bg-color-selected: #b4d6c1;
  --background: #white;
}

html {
  overflow-y: hidden;
  background-color: var(--background);
}

body {
  font-family: "Inter";
  margin: 0;
}

a {
  text-decoration: none;
  color: var(--navbar-text-color);
}

a:hover {
  color: black;
}

.main {
  position: absolute;
  left: 60%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

/* NAV BAR */
nav {
  height: 100%;
  position: fixed;
  width: 300px;
  margin: 0;
  padding: 0;
  font-size: xx-large;
  background-color: var(--navbar-bg-color);
  padding-right: 10px;
}

nav ul {
  position: absolute;
  top: 40%;
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  list-style-type: none;
}

nav li {
  padding-bottom: 20px;
}

/* MOBILE NAV BAR */
.topnav {
  opacity: 0;
  pointer-events: none;
  overflow: hidden;
  background-color: var(--navbar-bg-color);
  position: relative;
}

.topnav #navLinks {
  display: none;
}

.topnav a {
  float: left;
  color: var(--navbar-text-color);
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

.topnav a.icon {
  float: right;
}

.topnav a:hover {
  color: black;
}

/* HOME */
.home-content {
  width: 500px;
}

.home-content h1 {
  text-align: center;
  color: var(--navbar-text-color);
}

.home-content h3 {
  color: var(--grey-text-color);
  text-align: center;
}

.pfp-container {
position: relative;
  -webkit-transform: translate(10%);
  transform: translate(10%);
}

.fa-address-card {
  color: var(--navbar-text-color);
  font-size: 22.2rem;
  text-align: center;
  display: inline-block;
}

.text-container {
  border-style: solid;
  background-color: var(--navbar-bg-color);
  -moz-background-color: var(--navbar-bg-color);
  border-color: var(--navbar-bg-color);
  border-radius: 20px;
  -moz-border-radius: 20px;
  margin-top: 10px;
  padding-bottom: 20px;
  text-align: center;
}

.desc-text {
  padding: 10px 20px;
  color: var(--grey-text-color);
}

.projects-bttn-container {
text-align: center;
}

.projects-bttn {
  font-size: 18px;
  font-weight: 500;
  background-color: var(--navbar-text-color);
  color: white;
  border-radius: 10px;
  border-style: solid;
  border-color: var(--navbar-text-color);
  border-width: 3px;
  padding: 5px;
}

.projects-bttn:hover {
  background-color: var(--navbar-bg-color-selected);
  color: var(--navbar-text-color);
  border-color: var(--navbar-bg-color-selected);
}

/* PROJECTS */
.projects-content {  
  display: grid;
  grid-template-columns: 1.2fr 1.2fr;
  grid-template-rows: 1.3fr 1.6fr;
  gap: 0px 30px;
  grid-auto-flow: row;
  grid-template-areas:
    "title title"
    "ifixit-container report-container";
}

.title { 
  grid-area: title; 
  text-align: center;
  font-size: 20px;
  padding: 10px;
  height: 40px;
}

.title h1 {
  font-size: 60px;
  color: var(--navbar-text-color);
}

.title p {
  color: var(--grey-text-color);
}

.ifixit-container { 
  grid-area: ifixit-container;
  text-align: center;
  color: var(--grey-text-color);
  padding: 10px;
  background-color: var(--light-grey);
  border-color: var(--navbar-text-color);
  border-radius: 20px;
  margin: 40px 10px;
  font-size: 1.5rem;
  font-weight: bold;
  width: 250px;
}

.ifixit-container p {
  font-size: 20px;
  font-weight: 400;
}

.ifixit-container:hover {
  background-color: var(--navbar-text-color);
  color: white;
}

.report-container { 
  grid-area: report-container;
  text-align: center;
  color: var(--grey-text-color);
  padding: 10px;
  background-color: var(--light-grey);
  border-color: var(--navbar-text-color);
  border-radius: 20px;
  margin: 40px 10px;
  font-size: 1.5rem;
  font-weight: bold;
  width: 250px;
}

.report-container p {
  font-size: 20px;
  font-weight: 400;
}

.report-container:hover {
  background-color: var(--navbar-text-color);
  color: white;
}

/* CONTACT PAGE */
.contact-form-container{
  background-color: var(--light-grey);
  border-radius: 10px;
  padding: 20px;
}

input, textarea {
  width: 100%;
  padding: 10px;
  border: 1px solid white;
  border-radius: 5px;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 16px;
  resize: vertical;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
  font-size: 13px;
}

input[type=submit] {
  background-color: var(--navbar-bg-color);
  font-weight: bold;
  font-family: Arial, Helvetica, sans-serif;
  border: none;
}

input[type=submit]:hover {
  background-color: var(--navbar-bg-color-selected);
}

input:focus, textarea:focus {
  outline: none !important;
  border-color: var(--navbar-text-color);
  border: 2px solid var(--other-green); 
}

.contact {
  color: var(--grey-text-color);
}

.email-text {
  color: var(--grey-text-color);
}

/* MEDIA QUERIES */
@media only screen and (max-width: 1000px) {
  nav {
    opacity: 0;
    transition: visibility 0s, opacity 0.5s linear;
    pointer-events: none;
  }

  .main {
    transition: 0.5s ease-in;
    left: 50%;
    width: 400px;
  }

  .topnav {
    pointer-events: all;
    opacity: 1;
    transition: visibility 0s, opacity 0.5s linear;
  }

  .pfp-container {
    -webkit-transform: translate(15%);
    transform: translate(15%);
  }

  .fa-address-card {
    font-size: 15rem;
  }

  .home-content {
  width: 400px;
  }
  
  .desc-text {
    margin: 10px;
  }
}

@media only screen and (min-width: 1001px) {
  nav {
    opacity: 1;
    transition: visibility 0s, opacity 0.5s linear;
  }

  .main {
    transition: 0.5s ease-in;
    left: 60%;
  }
}

